--- a/public/css/main.css
+++ b/public/css/main.css
@@ -600,7 +600,7 @@
   .cinama {
     width: 100%;
     height: 810px;
-    background-image: url("./public/image/bg-cinama.webp");
+    background-image: url("/public/image/bg-cinama.webp");
     background-size: cover;
     .teitel {
       width: 100%;
